--- a/lambdas/authentication/serverless.yml
+++ b/lambdas/authentication/serverless.yml
@@ -72,5 +72,21 @@ functions:
               - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
             allowCredentials: true
 
+  invitation:
+    name: ${self:provider.stage}-authentication-invitation
+    image:
+      name: default
+      command:
+        - invitation.handler
+    events:
+      - http:
+          path: /auth/invitation
+          method: POST
+          cors:
+            origins:
+              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
+              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
+            allowCredentials: true
+
 plugins:
   - serverless-deployment-bucket
