--- a/.github/workflows/job-deploy-lambdas.yml
+++ b/.github/workflows/job-deploy-lambdas.yml
@@ -20,15 +20,17 @@ jobs:
           fetch-depth: 0
 
       - name: Check Files Changed
-        uses: dorny/paths-filter@v2
-        id: changes
-        with:
-          filters: |
-            package:
-              - 'lambdas/authentication/**'
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./lambdas/authentication
+          then
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Configure AWS Credentials
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -36,22 +38,22 @@ jobs:
           aws-region: us-east-1
 
       - uses: actions/setup-node@v3
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         with:
           cache: npm
           node-version: 18
 
       - name: Install Serverless
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         run: npm install -g serverless
 
       - name: Install Dependencies
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         run: npm install
         working-directory: lambdas/authentication
 
       - name: Deploy
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         run: sls deploy --stage ${{ inputs.environment }} --config serverless.yml
         working-directory: lambdas/authentication
 
@@ -66,15 +68,17 @@ jobs:
           fetch-depth: 0
 
       - name: Check Files Changed
-        uses: dorny/paths-filter@v2
-        id: changes
-        with:
-          filters: |
-            package:
-              - 'lambdas/authorizer/**'
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./lambdas/authorizer
+          then
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Configure AWS Credentials
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -82,22 +86,22 @@ jobs:
           aws-region: us-east-1
 
       - uses: actions/setup-node@v3
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         with:
           cache: npm
           node-version: 18
 
       - name: Install Serverless
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         run: npm install -g serverless
 
       - name: Install Dependencies
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         run: npm install
         working-directory: lambdas/authorizer
 
       - name: Deploy
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         run: sls deploy --stage ${{ inputs.environment }} --config serverless.yml
         working-directory: lambdas/authorizer
 
@@ -124,15 +128,17 @@ jobs:
           fetch-depth: 0
 
       - name: Check Files Changed
-        uses: dorny/paths-filter@v2
-        id: changes
-        with:
-          filters: |
-            package:
-              - 'lambdas/${{ matrix.package }}/**'
+        id: files
+        run: |
+          if git diff --quiet HEAD^ HEAD -- ./lambdas/${{ matrix.package}}
+          then
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Configure AWS Credentials
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -140,21 +146,21 @@ jobs:
           aws-region: us-east-1
 
       - uses: actions/setup-node@v3
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         with:
           cache: npm
           node-version: 18
 
       - name: Install Serverless
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         run: npm install -g serverless
 
       - name: Install Dependencies
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         run: npm install
         working-directory: lambdas/${{ matrix.package }}
 
       - name: Deploy
-        if: steps.changes.outputs.package == 'true'
+        if: steps.files.outputs.changed == 'true'
         run: sls deploy --stage ${{ inputs.environment }} --config serverless.yml
         working-directory: lambdas/${{ matrix.package }}
