fix(lambdas): move makefile into lambdas root

--- a/lambdas/Makefile
+++ b/lambdas/Makefile
@@ -2,7 +2,7 @@ environment ?= dev
 
 .PHONY: deploy-lambdas
 deploy-lambdas:
-	for dir in ./lambdas/*; do \
+	for dir in ./*; do \
         if [ -d "$$dir" ]; then \
             pushd $$dir && npm run deploy:$(environment); \
             popd; \
