fix(web): have to refresh page to see the generated questions

--- a/lambdas/assessment/serverless.yml
+++ b/lambdas/assessment/serverless.yml
@@ -112,5 +112,28 @@ functions:
               paths:
                 id: true
 
+  retrieve-generated-questions-by-id:
+    name: ${self:provider.stage}-assessment-retrieve-generated-questions-by-id
+    image:
+      name: default
+      command:
+        - retrieve_generated_questions_by_id.handler
+    events:
+      - http:
+          path: /assessments/{id}/questions
+          method: GET
+          cors:
+            origins:
+              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
+              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
+            allowCredentials: true
+          authorizer:
+            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.CookieAuthorizerId}
+            type: REQUEST
+          request:
+            parameters:
+              paths:
+                id: true
+
 plugins:
   - serverless-deployment-bucket
