--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -2,43 +2,9 @@ service: interview
 
 frameworkVersion: "3"
 
-provider:
-  name: aws
-  runtime: python3.9
-  architecture: arm64
-  stage: ${opt:stage, 'staging'}
-  region: us-east-1
-  stackName: ${self:provider.stage}-sls-${self:service}
-  deploymentBucket:
-    name: ${self:provider.stage}-sls-interview
-  vpc:
-    securityGroupIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/security_group_id/lambda}
-    subnetIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_1}
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_2}
-  iam:
-    role: ${ssm:/terraform/shared/iam/lambda_role_arn}
-  apiGateway:
-    restApiId: ${ssm:/terraform/${self:provider.stage}/api_gateway/id}
-    restApiRootResourceId: ${ssm:/terraform/${self:provider.stage}/api_gateway/root_resource_id}
-  ecr:
-    images:
-      default:
-        path: ./
-        file: Dockerfile
-        buildArgs:
-  environment:
-    ENVIRONMENT: ${self:provider.stage}
-    OPENAI_API_KEY: ${ssm:/secrets/${self:provider.stage}/openai_api_key}
-    POSTGRES_HOST: ${ssm:/terraform/${self:provider.stage}/rds/endpoint}
-    POSTGRES_PORT: ${ssm:/terraform/${self:provider.stage}/rds/port}
-    POSTGRES_DB: ${ssm:/terraform/${self:provider.stage}/rds/db_name}
-    POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
-    POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
-    QUESTION_GENERATION_PROCESSOR_QUEUE_URL: ${ssm:/terraform/${self:provider.stage}/sqs/question_generation_processor_queue_url}
-    SENTRY_DSN: ${ssm:/secrets/${self:provider.stage}/sentry_dsn/${self:service}}
-    SERVICE_NAME: ${self:service}
+custom: ${file(../shared/serverless.yml):custom}
+
+provider: ${file(../shared/serverless.yml):provider}
 
 functions:
   evaluate-question:
@@ -64,14 +30,8 @@ functions:
       - http:
           path: /interviews/{id}
           method: POST
-          cors:
-            origins:
-              - "https://${ssm:/terraform/staging/domain_name}"
-              - "https://www.${ssm:/terraform/staging/domain_name}"
-            allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.HeaderAuthorizerId}
-            type: REQUEST
+          cors: ${file(../shared/serverless.yml):cors}
+          authorizer: ${file(../shared/serverless.yml):header-authorizer}
           request:
             parameters:
               paths:
@@ -88,14 +48,8 @@ functions:
       - http:
           path: /interviews
           method: GET
-          cors:
-            origins:
-              - "https://${ssm:/terraform/staging/domain_name}"
-              - "https://www.${ssm:/terraform/staging/domain_name}"
-            allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.CookieAuthorizerId}
-            type: REQUEST
+          cors: ${file(../shared/serverless.yml):cors}
+          authorizer: ${file(../shared/serverless.yml):cookie-authorizer}
     timeout: 30
 
   retrieve-questions-by-id:
@@ -108,14 +62,8 @@ functions:
       - http:
           path: /interviews/{id}/questions
           method: GET
-          cors:
-            origins:
-              - "https://${ssm:/terraform/staging/domain_name}"
-              - "https://www.${ssm:/terraform/staging/domain_name}"
-            allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.HeaderAuthorizerId}
-            type: REQUEST
+          cors: ${file(../shared/serverless.yml):cors}
+          authorizer: ${file(../shared/serverless.yml):header-authorizer}
           request:
             parameters:
               paths:
@@ -131,14 +79,8 @@ functions:
       - http:
           path: /interviews/{id}/results
           method: GET
-          cors:
-            origins:
-              - "https://${ssm:/terraform/staging/domain_name}"
-              - "https://www.${ssm:/terraform/staging/domain_name}"
-            allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.CookieAuthorizerId}
-            type: REQUEST
+          cors: ${file(../shared/serverless.yml):cors}
+          authorizer: ${file(../shared/serverless.yml):cookie-authorizer}
           request:
             parameters:
               paths:
