--- a/lambdas/assessment/serverless.dev.yml
+++ b/lambdas/assessment/serverless.dev.yml
@@ -2,36 +2,9 @@ service: assessment
 
 frameworkVersion: "3"
 
-provider:
-  name: aws
-  runtime: python3.9
-  architecture: arm64
-  stage: dev
-  region: us-east-1
-  stackName: ${self:provider.stage}-sls-${self:service}
-  deploymentBucket:
-    name: ${self:provider.stage}-sls-assessment
-  iam:
-    role: ${ssm:/terraform/shared/iam/lambda_role_arn}
-  apiGateway:
-    restApiId: ${ssm:/terraform/${self:provider.stage}/api_gateway/id}
-    restApiRootResourceId: ${ssm:/terraform/${self:provider.stage}/api_gateway/root_resource_id}
-  ecr:
-    images:
-      default:
-        path: ./
-        file: Dockerfile
-        buildArgs:
-  environment:
-    ENVIRONMENT: ${self:provider.stage}
-    SERVICE_NAME: ${self:service}
-    OPENAI_API_KEY: ${ssm:/secrets/${self:provider.stage}/openai_api_key}
-    POSTGRES_HOST: ${ssm:/terraform/${self:provider.stage}/rds/endpoint}
-    POSTGRES_PORT: ${ssm:/terraform/${self:provider.stage}/rds/port}
-    POSTGRES_DB: ${ssm:/terraform/${self:provider.stage}/rds/db_name}
-    POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
-    POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
-    QUESTION_GENERATION_PROCESSOR_QUEUE_URL: ${ssm:/terraform/${self:provider.stage}/sqs/question_generation_processor_queue_url}
+custom: ${file(../shared/serverless.dev.yml):custom}
+
+provider: ${file(../shared/serverless.dev.yml):provider}
 
 functions:
   create:
@@ -44,12 +17,8 @@ functions:
       - http:
           path: /assessments
           method: POST
-          cors:
-            origins: "http://127.0.0.1:5173"
-            allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.CookieAuthorizerId}
-            type: REQUEST
+          cors: ${file(../shared/serverless.dev.yml):cors}
+          authorizer: ${file(../shared/serverless.dev.yml):cookie-authorizer}
 
   generate-questions:
     name: ${self:provider.stage}-assessment-generate-questions
@@ -71,12 +40,8 @@ functions:
       - http:
           path: /assessments
           method: GET
-          cors:
-            origins: "http://127.0.0.1:5173"
-            allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.CookieAuthorizerId}
-            type: REQUEST
+          cors: ${file(../shared/serverless.dev.yml):cors}
+          authorizer: ${file(../shared/serverless.dev.yml):cookie-authorizer}
 
   retrieve-by-id:
     name: ${self:provider.stage}-assessment-retrieve-by-id
@@ -88,12 +53,8 @@ functions:
       - http:
           path: /assessments/{id}
           method: GET
-          cors:
-            origins: "http://127.0.0.1:5173"
-            allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.CookieAuthorizerId}
-            type: REQUEST
+          cors: ${file(../shared/serverless.dev.yml):cors}
+          authorizer: ${file(../shared/serverless.dev.yml):cookie-authorizer}
           request:
             parameters:
               paths:
@@ -109,12 +70,8 @@ functions:
       - http:
           path: /assessments/{id}/questions
           method: GET
-          cors:
-            origins: "http://127.0.0.1:5173"
-            allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.CookieAuthorizerId}
-            type: REQUEST
+          cors: ${file(../shared/serverless.dev.yml):cors}
+          authorizer: ${file(../shared/serverless.dev.yml):cookie-authorizer}
           request:
             parameters:
               paths:
