--- a/lambdas/company/serverless.yml
+++ b/lambdas/company/serverless.yml
@@ -2,41 +2,9 @@ service: company
 
 frameworkVersion: "3"
 
-provider:
-  name: aws
-  runtime: python3.9
-  architecture: arm64
-  stage: ${opt:stage, 'staging'}
-  region: us-east-1
-  stackName: ${self:provider.stage}-sls-${self:service}
-  deploymentBucket:
-    name: ${self:provider.stage}-sls-company
-  vpc:
-    securityGroupIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/security_group_id/lambda}
-    subnetIds:
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_1}
-      - ${ssm:/terraform/${self:provider.stage}/vpc/subnet_id/private_2}
-  iam:
-    role: ${ssm:/terraform/shared/iam/lambda_role_arn}
-  apiGateway:
-    restApiId: ${ssm:/terraform/${self:provider.stage}/api_gateway/id}
-    restApiRootResourceId: ${ssm:/terraform/${self:provider.stage}/api_gateway/root_resource_id}
-  ecr:
-    images:
-      default:
-        path: ./
-        file: Dockerfile
-        buildArgs:
-  environment:
-    ENVIRONMENT: ${self:provider.stage}
-    POSTGRES_HOST: ${ssm:/terraform/${self:provider.stage}/rds/endpoint}
-    POSTGRES_PORT: ${ssm:/terraform/${self:provider.stage}/rds/port}
-    POSTGRES_DB: ${ssm:/terraform/${self:provider.stage}/rds/db_name}
-    POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
-    POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
-    SENTRY_DSN: ${ssm:/secrets/${self:provider.stage}/sentry_dsn/${self:service}}
-    SERVICE_NAME: ${self:service}
+custom: ${file(../shared/serverless.yml):custom}
+
+provider: ${file(../shared/serverless.yml):provider}
 
 functions:
   me:
@@ -49,14 +17,8 @@ functions:
       - http:
           path: /companies/me
           method: GET
-          cors:
-            origins:
-              - "https://${ssm:/terraform/staging/domain_name}"
-              - "https://www.${ssm:/terraform/staging/domain_name}"
-            allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.CookieAuthorizerId}
-            type: REQUEST
+          cors: ${file(../shared/serverless.yml):cors}
+          authorizer: ${file(../shared/serverless.yml):cookie-authorizer}
 
 plugins:
   - serverless-deployment-bucket
