--- a/lambdas/shared/serverless.yml
+++ b/lambdas/shared/serverless.yml
@@ -32,6 +32,7 @@ provider:
     JWT_SECRET_KEY: ${ssm:/secrets/${self:provider.stage}/jwt_secret_key}
     LINK_BASE_URL: ${ssm:/terraform/${self:provider.stage}/domain_name}
     SERVICE_NAME: ${self:service}
+    NAMESPACE: matchya
     OPENAI_API_KEY: ${ssm:/secrets/${self:provider.stage}/openai_api_key}
     POSTGRES_HOST: ${ssm:/terraform/${self:provider.stage}/rds/endpoint}
     POSTGRES_PORT: ${ssm:/terraform/${self:provider.stage}/rds/port}
@@ -46,3 +47,11 @@ cors:
     - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
     - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
   allowCredentials: true
+
+cookie-authorizer:
+  authorizerId: ${cf:${self:provider.stage}-sls-authorizer.CookieAuthorizerId}
+  type: REQUEST
+
+header-authorizer:
+  authorizerId: ${cf:${self:provider.stage}-sls-authorizer.HeaderAuthorizerId}
+  type: REQUEST
