--- a/lambdas/authentication/serverless.yml
+++ b/lambdas/authentication/serverless.yml
@@ -43,5 +43,18 @@ functions:
           method: POST
           cors: ${file(../shared/serverless.yml):cors}
 
+  invitation-invalidate:
+    name: ${self:provider.stage}-authentication-invitation-invalidate
+    image:
+      name: default
+      command:
+        - invitation_invalidate.handler
+    events:
+      - http:
+          path: /auth/invitation/invalidate
+          method: POST
+          cors: ${file(../shared/serverless.yml):cors}
+          authorizer: ${file(../shared/serverless.yml):header-authorizer}
+
 plugins:
   - serverless-deployment-bucket
