--- a/lambdas/assessment/serverless.dev.yml
+++ b/lambdas/assessment/serverless.dev.yml
@@ -77,5 +77,22 @@ functions:
               paths:
                 id: true
 
+  delete-by-id:
+    name: ${self:provider.stage}-assessment-delete-by-id
+      image:
+        name: default
+        command:
+          - delete_by_id.handler
+      events:
+        - http:
+            path: /assessments/{id}
+            method: DELETE
+            cors: ${file(../shared/serverless.dev.yml):cors}
+            authorizer: ${file(../shared/serverless.dev.yml):cookie-authorizer}
+            request:
+              parameters:
+                paths:
+                  id: true
+
 plugins:
   - serverless-deployment-bucket
