--- a/lambdas/candidate/serverless.yml
+++ b/lambdas/candidate/serverless.yml
@@ -29,14 +29,10 @@ functions:
         - invite.handler
     events:
       - http:
-          path: /candidates/invite/{id}
+          path: /candidates/invite
           method: POST
           cors: ${file(../shared/serverless.yml):cors}
           authorizer: ${file(../shared/serverless.yml):cookie-authorizer}
-          request:
-            parameters:
-              paths:
-                id: true
 
   retrieve:
     name: ${self:provider.stage}-candidate-retrieve
