--- a/lambdas/authentication/package.json
+++ b/lambdas/authentication/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "scripts": {
     "deploy:dev": "sls deploy --config serverless.dev.yml",
-    "deploy:staging": "sls deploy --stage staging --config serverless.yml",
+    "deploy:staging": "sls deploy --param=\"arch=arm64\" --stage staging --config serverless.yml",
     "remove:dev": "sls remove --config serverless.dev.yml",
-    "remove:staging": "sls remove --stage staging --config serverless.yml",
+    "remove:staging": "sls remove --param=\"arch=arm64\" --stage staging --config serverless.yml",
     "release": "semantic-release"
   },
   "keywords": [],
