Add quiz package to workflows

--- a/.github/workflows/job-deploy-lambdas.yml
+++ b/.github/workflows/job-deploy-lambdas.yml
@@ -91,6 +91,8 @@ jobs:
             label: Assessment
           - package: video
             label: Video
+          - package: quiz
+            label: Quiz
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment-label }}
     steps:
