--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -70,6 +70,7 @@ jobs:
             "candidate",
             "company",
             "interview",
+            "quiz"
           ]
     steps:
       - name: Fetch Repository
