--- a/.github/workflows/job-create-release.yml
+++ b/.github/workflows/job-create-release.yml
@@ -38,12 +38,12 @@ jobs:
       - name: Install dependencies
         run: |
           cd ${{ inputs.component }}
-          npm install
+          npm ci
         if: inputs.component == 'web'
 
       - name: Install dependencies
         run: |
-          npm install
+          npm ci
         if: inputs.component != 'web'
         working-directory: lambdas/${{ inputs.component }}
 
