--- a/.github/workflows/job-deploy-db-changelog.yml
+++ b/.github/workflows/job-deploy-db-changelog.yml
@@ -46,5 +46,5 @@ jobs:
       - name: Update Changelog
         run: |
           make create-ssh-tunnel environment=${{ inputs.environment }}
-          python db/scripts/update.py staging
+          python db/scripts/update.py --stage staging
           make close-ssh-tunnel environment=${{ inputs.environment }}
