fix(ci): upload to non-www bucket

--- a/.github/workflows/job-deploy-website.yml
+++ b/.github/workflows/job-deploy-website.yml
@@ -67,14 +67,14 @@ jobs:
       - name: Deploy to S3
         run: |
           echo "Starting deployment to S3..."
-          aws s3 sync dist/ s3://www.${{ steps.fetch_app_domain_name.outputs.app_domain_name }}
+          aws s3 sync dist/ s3://${{ steps.fetch_app_domain_name.outputs.app_domain_name }}
           echo "Deployment to S3 completed."
         working-directory: web
 
       - name: Get the distribution id for Cloudfront
         id: get_distribution_id
         run: |
-          distribution_id=$(aws ssm get-parameter --name "/terraform/${{ inputs.environment }}/www.${{ steps.fetch_app_domain_name.outputs.app_domain_name }}/cloudfront_distribution_id" --query "Parameter.Value" --output text)
+          distribution_id=$(aws ssm get-parameter --name "/terraform/${{ inputs.environment }}/${{ steps.fetch_app_domain_name.outputs.app_domain_name }}/cloudfront_distribution_id" --query "Parameter.Value" --output text)
           echo "distribution_id=$distribution_id" >> $GITHUB_OUTPUT
           echo "Distribution Id found: $distribution_id"
 
